syntax = "proto3";

option csharp_namespace = "DoServicesApp";


service UserGrpc {
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc RegisterUser (RegisterUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message RegisterUserRequest {
  string name = 1;
  string email = 2;
  string role = 3;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
}

service ServiceCatalogGrpc {
  rpc ListServices (Empty) returns (ServiceList);
}

message Empty {}

message ServiceItem {
  string id = 1;
  string title = 2;
  string description = 3;
  float price = 4;
  string category = 5;
}

message ServiceList {
  repeated ServiceItem services = 1;
}


service OrderGrpc {

  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse) ;
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);

}



message CreateOrderRequest {
  string user_id = 1;
  string service_id = 2;
   string notes = 3;
}
message GetOrderRequest {
  string order_id = 1;
}

message OrderResponse {
  string order_id = 1;
  string user_id = 2;
  string service_id = 3;
  string status = 4; // e.g., "Pending", "Completed", "Cancelled"
 
  string notes = 5;
  string created_at = 6; // Timestamp in ISO 8601 format
}